<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B92B27"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/loginHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="92dp"
        android:gravity="center"
        android:text="@string/bem_vindo_ao_push_fatec"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginHeading"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/input_background"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingBottom="15dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:paddingTop="15dp"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_email"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_background"
        android:ems="10"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:paddingBottom="15dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:paddingTop="15dp"
        android:textSize="16sp" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_password"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_background"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textSize="16sp" />

    <Button
        android:id="@+id/login_register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/border_button"
        android:text="@string/ainda_n_o_tem_uma_conta"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="16sp" />








</RelativeLayout>