<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SendActivity">

    <TextView
        android:id="@+id/txt_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop= "10dp"
        android:text="@string/enviando_para_os_alunos_do_curso_de" />

    <Spinner
        android:id="@+id/spinner_curso"
        android:background="@drawable/input_background"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_view"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:entries="@array/cursos_array"
        android:paddingBottom="10dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:paddingTop="10dp"
        android:textSize="14sp">
    </Spinner>


    <EditText
        android:id="@+id/titulo_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_view"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/input_background"
        android:ems="10"
        android:hint="@string/Título"
        android:inputType="text"
        android:paddingBottom="15dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:paddingTop="15dp"
        android:textSize="16sp" />


    <EditText
        android:id="@+id/message_view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/txt_view"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="150dp"
        android:background="@drawable/input_plan_background"
        android:ems="10"
        android:hint="@string/digite_a_notifica_o"
        android:inputType="textPersonName"
        android:paddingBottom="15dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:paddingTop="15dp" />



    <Button
        android:id="@+id/send_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/message_view"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/primary_color_btn"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:text="@string/enviar_notifica_o"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

</RelativeLayout>