<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.PostagemActivity"
    tools:layout_editor_absoluteY="81dp">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="189dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="93dp"
        android:contentDescription="@string/Imagem"
        android:src="@drawable/common_google_signin_btn_icon_dark"
        app:layout_constraintBottom_toTopOf="@+id/selecionar_imagem_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/salvar_imagem_btn"
        style="@android:style/Widget.Button"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="115dp"
        android:text="@string/Enviar"
        android:textAllCaps="false"
        android:textColor="#040404"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selecionar_imagem_btn"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/selecionar_imagem_btn"
        style="@android:style/Widget.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:text="@string/Selecionar"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/salvar_imagem_btn"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/salvar_imagem_btn"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:ignore="MissingConstraints" />


</android.support.constraint.ConstraintLayout>